--- a/pages/reportProblem/uploadPhoto/uploadPhoto.wxss
+++ b/pages/reportProblem/uploadPhoto/uploadPhoto.wxss
@@ -57,14 +57,15 @@
   float: left;
   margin-right: 9px;
   margin-bottom: 9px;
+  width: 100px;
+  height: 100px;
 }
 
 .weui-uploader__img {
-  display: block;
   /* width: 79px;
   height: 79px; */
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
 }
 
 .weui-uploader__file_status {
